Refactoring per migliorare il codice